--- a/OC7.html
+++ b/OC7.html
@@ -1,5 +1,5 @@
 <html>
-    <head><link rel="stylesheet" href="ass2-7.css"></head>
+    <head><link rel="stylesheet" href="OC7.css"></head>
 <body>
     <table id="header">
 <tr>
